<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">Cannot connect to camera.</string>
    <string name="camera_label">FLK Camera</string>
    <string name="video_camera_label">FLK Camcorder</string>
    <string name="gallery_camera_bucket_name">Camera pictures</string>
    <string name="gallery_camera_videos_bucket_name">Camera videos</string>
    <string name="wait">Please wait\u2026</string>
    <string name="no_storage">Please insert an SD card before using the camera.</string>
    <string name="not_enough_space">Your SD card is full.</string>
    <string name="preparing_sd">Preparing SD card\u2026</string>
    <string name="confirm_restore_title">Restore defaults</string>
    <string name="confirm_restore_message">Camera settings will be restored to defaults.</string>
    <string name="review_play">PLAY</string>
    <string name="review_cancel">CANCEL</string>
    <string name="review_ok">OK</string>
    <string name="review_retake">RETAKE</string>
    <string name="camera_gallery_photos_text">Gallery</string>
    <string name="pref_camera_recordlocation_title">Store location</string>
    <string name="pref_camera_recordlocation_default" translatable="false">none</string>
    <string name="pref_camera_recordlocation_entry_off">Off</string>
    <string name="pref_camera_recordlocation_entry_on">On</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_default" translatable="false">high</string>
    <string name="pref_video_quality_entry_high">High (30m)</string>
    <string name="pref_video_quality_entry_low">Low (30m)</string>
    <string name="pref_video_quality_entry_mms">MMS (Low, 30s)</string>
    <string name="pref_video_quality_entry_youtube">YouTube (High, 10m)</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_entry_2592x1936">5M Pixels</string>
    <string name="pref_camera_picturesize_entry_2048x1536">3M Pixels</string>
    <string name="pref_camera_picturesize_entry_1600x1200">2M Pixels</string>
    <string name="pref_camera_picturesize_entry_1024x768">1M Pixels</string>
    <string name="pref_camera_picturesize_entry_320x240">QVGA</string>
    <string name="pref_camera_jpegquality_default" translatable="false">superfine</string>
    <string name="pref_camera_jpegquality_title">Picture quality</string>
    <string name="pref_camera_jpegquality_entry_superfine">Super fine</string>
    <string name="pref_camera_jpegquality_entry_fine">Fine</string>
    <string name="pref_camera_jpegquality_entry_normal">Normal</string>
    <string name="pref_camera_focusmode_default" translatable="false">auto</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_flashmode_default" translatable="false">auto</string>
    <string name="pref_camera_flashmode_no_flash" translatable="false">no_flash</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="pref_camera_flashmode_entry_on">On</string>
    <string name="pref_camera_flashmode_entry_off">Off</string>
    <string name="pref_camera_video_flashmode_default" translatable="false">off</string>
    <string name="pref_camera_whitebalance_default" translatable="false">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_whitebalance_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>
    <string name="pref_camera_coloreffect_default" translatable="false">none</string>
    <string name="pref_camera_coloreffect_title">Color effect</string>
    <string name="pref_camera_coloreffect_entry_none">None</string>
    <string name="pref_camera_coloreffect_entry_mono">Mono</string>
    <string name="pref_camera_coloreffect_entry_sepia">Sepia</string>
    <string name="pref_camera_coloreffect_entry_negative">Negative</string>
    <string name="pref_camera_coloreffect_entry_solarize">Solarize</string>
    <string name="pref_camera_coloreffect_entry_posterize">Posterize</string>
    <string name="pref_camera_coloreffect_entry_aqua">Aqua</string>
    <string name="pref_camera_coloreffect_entry_pastel">Pastel</string>
    <string name="pref_camera_coloreffect_entry_mosaic">Mosaic</string>
    <string name="pref_camera_coloreffect_entry_redtint">Red tint</string>
    <string name="pref_camera_coloreffect_entry_bluetint">Blue tint</string>
    <string name="pref_camera_coloreffect_entry_greentint">Green tint</string>
    <string name="pref_camera_scenemode_default" translatable="false">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_scenemode_entry_auto">Auto</string>
    <string name="pref_camera_scenemode_entry_action">Action</string>
    <string name="pref_camera_scenemode_entry_portrait">Portrait</string>
    <string name="pref_camera_scenemode_entry_landscape">Landscape</string>
    <string name="pref_camera_scenemode_entry_night">Night</string>
    <string name="pref_camera_scenemode_entry_night_portrait">Night portrait</string>
    <string name="pref_camera_scenemode_entry_theatre">Theatre</string>
    <string name="pref_camera_scenemode_entry_beach">Beach</string>
    <string name="pref_camera_scenemode_entry_snow">Snow</string>
    <string name="pref_camera_scenemode_entry_sunset">Sunset</string>
    <string name="pref_camera_scenemode_entry_steadyphoto">Steady photo</string>
    <string name="pref_camera_scenemode_entry_fireworks">Fireworks</string>
    <string name="pref_camera_quickcapture_title">Quick capture</string>
    <string name="pref_camera_quickcapture_default" translatable="false">off</string>
    <string name="pref_camera_quickcapture_entry_on">On</string>
    <string name="pref_camera_quickcapture_entry_off">Off</string>
    <string name="pref_restore_title">Camera settings</string>
    <string name="pref_restore_detail">Restore to defaults</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default" translatable="false">0</string>
    <string name="details_ok">OK</string>
    <string name="spaceIsLow_content">Your SD card is running out of space. Change the quality setting or delete items from Gallery.</string>
    <string name="image_file_name_format" translatable="false">"'IMG'_yyyyMMdd_HHmmss"</string>
    <string name="video_file_name_format" translatable="false">"'VID'_yyyyMMdd_HHmmss"</string>
    <string name="video_reach_size_limit">Size limit reached.</string>
    <string name="zoom_control_title">Zoom</string>
    <string name="switch_to_camera_lable">Switch to camera</string>
    <string name="switch_to_video_lable">Switch to video</string>
    <string name="app_back">Back</string>
    <string name="app_save">Save</string>
    <string name="app_send">Send</string>
    <string name="video_recorder_start_hint">Press shutter button to start shooting</string>
    <string name="video_compressing">Compressing（%s%%）</string>
</resources>