<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/video_recorder_preview_area"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center" >

        <SurfaceView
            android:id="@+id/surface_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/video_recorder_play_area"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5.0dip" >

        <ImageView
            android:id="@+id/video_recorder_play_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mmtitle_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/videorecord_cancel"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/mm_title_btn_back"
                android:focusable="true"
                android:gravity="center"
                android:minWidth="70.0dip"
                android:text="@string/app_back"
                android:textColor="@color/mm_title_btn_text" />

            <View
                android:layout_width="0.0dip"
                android:layout_height="1.0dip"
                android:layout_weight="1.0" />

            <ImageButton
                android:id="@+id/videorecord_camera_switch"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/mm_title_btn_right"
                android:focusable="true"
                android:gravity="center"
                android:minWidth="70.0dip"
                android:src="@drawable/mm_title_btn_camera_switch" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/video_recorder_mask" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mmfooter_bg"
            android:gravity="center" >

            <Button
                android:id="@+id/videorecord_save_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10.0dip"
                android:background="@drawable/mm_title_btn_right"
                android:gravity="center"
                android:minWidth="70.0dip"
                android:text="@string/app_save"
                android:textColor="@color/mm_title_btn_text"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/videorecord_control_btn"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@null"
                android:src="@drawable/video_recorder_start_btn" />

            <Button
                android:id="@+id/videorecord_send"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10.0dip"
                android:background="@drawable/mm_title_act_btn"
                android:gravity="center"
                android:minWidth="70.0dip"
                android:text="@string/app_send"
                android:textColor="@color/mm_title_btn_text"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <View
            android:id="@+id/center"
            android:layout_width="224.0dip"
            android:layout_height="288.0dip"
            android:layout_centerInParent="true" />

        <ImageView
            android:id="@+id/video_recorder_recording_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/center"
            android:layout_alignTop="@id/center"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="5.0dip"
            android:src="@drawable/recording_icon_light" />

        <TextView
            android:id="@+id/video_recorder_recorded_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/center"
            android:layout_alignTop="@id/center"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="5.0dip"
            android:background="@drawable/mm_text_bg_trans"
            android:textSize="@dimen/LargeTextSize" />

        <TextView
            android:id="@+id/videorecord_start_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/center"
            android:gravity="center_horizontal"
            android:text="@string/video_recorder_start_hint" />

        <TextView
            android:id="@+id/videorecord_time_limit_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/center"
            android:gravity="center_horizontal"
            android:visibility="gone" />

        <TextView
            android:id="@+id/video_recorder_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/center"
            android:layout_below="@id/center"
            android:paddingTop="2.0dip"
            android:textSize="@dimen/SmallTextSize"
            android:visibility="gone" />

        <TextView
            android:id="@+id/video_recorder_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/center"
            android:layout_marginRight="10.0dip"
            android:layout_toLeftOf="@id/video_recorder_size"
            android:paddingTop="2.0dip"
            android:textSize="@dimen/SmallTextSize"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/video_play_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/video_play_btn"
            android:visibility="gone" />
    </LinearLayout>

</FrameLayout>